added forgot password

--- a/banking-frontend-angular/src/app/forgot-password-otp/forgot-password-otp.component.html
+++ b/banking-frontend-angular/src/app/forgot-password-otp/forgot-password-otp.component.html
@@ -1,23 +1,21 @@
 <div class="text-center">
     <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
-<div class="text-center"><a [routerLink]="['/home']"><button class="btn btn-primary" type="submit" >Home</button></a></div>
+<div class="text-center"><a [routerLink]="['/home']"><button class="btn btn-primary" type="submit">Home</button></a></div>
 <div class="wrapper container" style="width: 28%;">
-
     <p>Enter OTP (One Time Password) sent to your Email ID</p>
     <br>
-    <form (ngSubmit)="verifyOtp()" #f="ngForm">
+    <form (ngSubmit)="f.valid && verifyOtp()" #f="ngForm">
         <div class="form-group">
-            <input type="text" class="form-control" name="otp" #otp="ngModel" [(ngModel)]="forgotUserId.otp" required>
+            <input type="text" class="form-control" name="otp" #otp="ngModel" [(ngModel)]="forgotPassword.otp" required>
             <div class="alert alert-danger" *ngIf="f.submitted && otp.invalid && (otp.dirty || otp.touched)">
                 <div *ngIf="otp.errors.required">OTP is required</div>
             </div>
         </div>
         <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Submit" style="width: 100%;">
+            <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
         </div>
     </form>
-    <div class="alert alert-success" *ngIf="flag===true && otpIsCorrect===true">User ID is sent to your Email ID</div>
     <div class="alert alert-danger" *ngIf="flag===true && otpIsCorrect===false">OTP you entered is incorrect</div>
     <div class="alert alert-danger" *ngIf="error">{{message}}</div>
 </div>
