--- a/banking-frontend-angular/src/app/forgot-password/forgot-password.component.html
+++ b/banking-frontend-angular/src/app/forgot-password/forgot-password.component.html
@@ -1,48 +1,27 @@
-<div class="page-header h1">
-    <p>HFDC Bank</p>
+<div class="text-center">
+    <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
+</div>
+<div class="text-center"><a [routerLink]="['/home']"><button class="btn btn-primary" type="submit">Home</button></a>
 </div>
 <div class="wrapper container" style="width: 28%;">
-    <h4>Trouble Logging In-Forgot Login Password?</h4>
+    <h4>Trouble Logging In - Forgot Login Password?</h4>
     <br>
     <p>Please fill in your credentials to set the new password.</p>
     <br>
-        <form #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()">
-            <div class="form-group" >
-                <label>Enter User ID</label>
-                <input type="text" #userId="ngModel" [class.is-invalid]="f.submitted && userId.invalid"
-                class="form-control" name="userId" [(ngModel)]="forgotPassword.userId" required>
-                <div *ngIf="f.submitted && userId.invalid" class="invalid-feedback">
-                    <div *ngIf="userId.errors.required">User Id is required</div>
-                </div>
+    <form #f="ngForm" (ngSubmit)="f.form.valid && sendOtp()">
+        <div class="form-group">
+            <label>Enter User ID</label>
+            <input type="text" #userId="ngModel" [class.is-invalid]="f.submitted && userId.invalid" class="form-control"
+                name="userId" [(ngModel)]="model.userId" required>
+            <div *ngIf="f.submitted && userId.invalid" class="invalid-feedback">
+                <div *ngIf="userId.errors.required">User Id is required</div>
             </div>
-            
-             <button type="submit" class="btn btn-primary">Proceed</button>
-        </form>
-</div>       
-       <!-- 
-        <form [formGroup]="forgotPasswordForm">
-            <div class="form-group">
-                <label>Enter User ID</label>
-                <input [class.is-invalid]="forgotPasswordForm.get('userId').invalid && forgotPasswordForm.get('userId').touched" 
-                        formControlName="userId" type="text" class="form-control">
-                <small class="text-danger" [class.d-none]="forgotPasswordForm.get('userId').valid || forgotPasswordForm.get('userId').untouched">User ID is required</small>
-            </div>
-
-            <div class="form-group">
-                <label>Enter OTP(One Time Password) sent to your email Id</label>
-                <input [class.is-invalid]="forgotPasswordForm.get('otp').invalid && forgotPasswordForm.get('otp').touched"
-                        formControlName="otp" type="text" class="form-control">
-                <div *ngIf="forgotPasswordForm.get('otp').invalid && forgotPasswordForm.get('otp').touched">
-                    <small *ngIf="forgotPasswordForm.get('otp').errors?.required" class="text-danger">OTP is required</small>
-                    <small *ngIf="forgotPasswordForm.get('otp').errors?.minLength" class="text-danger">OTP should be of minimum 6 digits</small>
-                    <small *ngIf="forgotPasswordForm.get('otp').errors?.maxLength" class="text-danger">OTP should not exceed 6 digits</small>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="Proceed" style="margin-left: 80px;">
-                <input type="submit" class="btn btn-primary" value="Back" style="margin-left:80px ;" >
-            </div>
-        </form>   
+        </div>
+        <button type="submit" class="btn btn-primary" style="width: 100%;">Proceed</button>
+    </form>
+    <div class="alert alert-danger" *ngIf="userDoesntExist">User doesn't exist</div>
+    <div class="alert alert-danger" *ngIf="error">{{message}}</div>
 </div>
--->
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-scale-multiple">
+    <p style="color: white">Please Wait. </p>
+</ngx-spinner>
