--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -5,7 +5,7 @@
     <h4>Set New Password</h4>
     <br>
 
-    <form #f="ngForm" (ngSubmit)="onSubmit()">
+    <form #f="ngForm">
         <div class="form-group" >
             <label>Enter new Password</label>
             <input type="password" class="form-control" name="newPassword">
@@ -19,24 +19,3 @@
          <button type="submit" class="btn btn-primary">Proceed</button>
     </form>
 </div>       
-
-
-
-  <!--  
-    <form [formGroup]="setNewPasswordForm">
-        <div class="form-group ">
-            <label>Enter new password</label>
-            <input class="form-control" type="password" name="password">
-        </div>
-        <div class="form-group">
-            <label>Confirm New Password</label>
-            <input [class.is-invalid]="setNewPasswordForm.errors?.misMatch" formControlName="confirmPassword" type="password" class="form-control">
-            <small class="text-danger" *ngIf="setNewPasswordForm.errors?.misMatch">Passwords do not match</small>
-
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Submit" style="margin-left: 80px; align-content: center;">
-        </div>
-    </form>
-</div>
--->
