--- a/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.html
+++ b/banking-frontend-angular/src/app/add-beneficiary/add-beneficiary.component.html
@@ -18,7 +18,7 @@
   
     </div>
   </div>
-<div class="wrapper container ben">
+<div class="wrapper container ">
     
     <p class="h3">Add Beneficiary</p>
     <form (ngSubmit)="beneficiaryForm.valid && showDetails()" #beneficiaryForm="ngForm">
