--- a/banking-frontend-angular/src/app/change-password/change-password.component.css
+++ b/banking-frontend-angular/src/app/change-password/change-password.component.css
@@ -1,15 +1,4 @@
-/*.wrapper {
-     background-color: #ffe2e2; 
-    border-radius: 6px;
-    padding: 14px;
-    width: 50%;
-    position: relative;
-}
 
-.wrapper card{
-    margin-top: 0px;
-    padding: 0px;
-}*/
 .wrapper {
     width: 600px;
     background-image: linear-gradient(to bottom right, #adb0c5, #d3dbe0, #adb0c5);
@@ -19,3 +8,9 @@
     border-radius: 10px;
     padding: 14px;
 }
+
+.modal-content{
+    background-image: linear-gradient(to bottom right, #adb0c5, #d3dbe0, #adb0c5);
+      border: .2rem solid #428BCA;
+  }
+  
