--- a/banking-frontend-angular/src/app/view-beneficiary/view-beneficiary.component.html
+++ b/banking-frontend-angular/src/app/view-beneficiary/view-beneficiary.component.html
@@ -1,5 +1,24 @@
 <app-dashboard></app-dashboard>
-<div class="wrapper container ben">
+<button id="openModalButton" [hidden]="true" data-toggle="modal" data-target="#myModal">Open Modal</button>
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+  
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Status</h4>
+        </div>
+        <div class="modal-body">
+          <p>{{statusMessage}}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+  
+    </div>
+  </div>
+<div class="wrapper container">
   <input type="button" value="Download PDF" (click)="captureScreen()"/>
     <table id="contentToConvert" class="table table-striped table-active table-responsive-md">
       <thead style="background-color: #adb0c5;">
