--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -5,7 +5,7 @@
     <h4>Set New Password</h4>
     <br>
 
-    <form class="form" name="form"#f="ngForm" (ngSubmit)="f.form.valid && onSubmit()" >
+    <form class="form" name="form"#f="ngForm" (ngSubmit)="f.form.valid && onSubmit()"  [appMatching]="['userPassword', 'cuserPassword']">
         <div class="form-group">
             <label> Set New Password </label>
             <input class="form-control" type="password" name="newPassword" 
