email service opening an account

--- a/banking-frontend-angular/src/app/change-password/change-password.component.html
+++ b/banking-frontend-angular/src/app/change-password/change-password.component.html
@@ -20,13 +20,13 @@
   </div>
 <div class="wrapper container center">
     <p class="h3">Set Password</p>
-    <form class="form" name="form" (ngSubmit)="f.form.valid && onSubmit()" [appMustMatch]="['userPassword', 'cuserPassword' ,'txPassword', 'ctxPassword']" #f="ngForm">
+    <form class="form" name="form" (ngSubmit)="f.form.valid && onSubmit()" [appMustMatch]="['userPassword', 'cuserPassword' ,'txPassword', 'ctxPassword']"  #f="ngForm">
         <div class="form-group">
             <label> Set Login Password</label>
             <input class="form-control" type="password" name="userPassword" 
             placeholder="Enter Password" [(ngModel)]="model.userPassword" #userPassword="ngModel"
             [ngClass]="{ 'is-invalid': f.submitted && userPassword.invalid }" required minlength="8"
-            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,})">
+            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}">
             <div *ngIf="f.submitted && userPassword.invalid" class="invalid-feedback">
                 <div *ngIf="userPassword.errors.required">Password is required</div>
                 <div *ngIf="userPassword.errors.minlength">Password must be at least 8 characters</div>
