--- a/banking-frontend-angular/src/app/account-statement/account-statement.component.html
+++ b/banking-frontend-angular/src/app/account-statement/account-statement.component.html
@@ -11,8 +11,9 @@
     </div>
     <button type="submit" class="btn btn-default"  >Submit</button>
   </form>
+  <input type="button" value="Download PDF" (click)="captureScreen()"/>
   <div *ngIf="searched">
-  <table class="table table-striped table-active table-responsive-md">
+  <table id="contentToConvert" class="table table-striped table-active table-responsive-md">
     <thead style="background-color: #adb0c5;">
       <tr>
         <th scope="col">#</th>
