--- a/banking-frontend-angular/src/app/register-ib/register-ib.component.html
+++ b/banking-frontend-angular/src/app/register-ib/register-ib.component.html
@@ -46,7 +46,7 @@
             <input class="form-control" type="password" name="userPassword" 
             placeholder="Enter Password" [(ngModel)]="model.userPassword" #userPassword="ngModel"
             [ngClass]="{ 'is-invalid': f.submitted && userPassword.invalid }" required minlength="8"
-            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,})">
+            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}">
             <p class="font-italic"><small>*Atleast 8 characters long with UpperCase ,LowerCase ,digit ,special characters</small></p>
             <div *ngIf="f.submitted && userPassword.invalid" class="invalid-feedback">
                 <div *ngIf="userPassword.errors.required">Password is required</div>
