--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -1,17 +1,34 @@
 <div class="text-center">
     <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="160" height="160">
 </div>
+<button id="openModalButton" [hidden]="true" data-toggle="modal" data-target="#myModal">Open Modal</button>
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">{{statusCode}}</h4>
+        </div>
+        <div class="modal-body">
+          <p>{{statusMessage}}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal" (click)="onClick($event)">Close</button>
+        </div>
+      </div>
+  
+    </div>
+  </div>
 <div class="wrapper container" style="width: 28%;">
     <h4>Set New Password</h4>
     <br>
 
-    <form class="form" name="form"#f="ngForm" (ngSubmit)="f.form.valid && onSubmit()"  [appMatching]="['userPassword', 'cuserPassword']">
+    <form class="form" name="form" #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()"  [appMatching]="['newPassword', 'cnewPassword']" >
         <div class="form-group">
             <label> Set New Password </label>
             <input class="form-control" type="password" name="newPassword" 
             placeholder="Enter New Password" [(ngModel)]="model.newPassword" #newPassword="ngModel"
             [ngClass]="{ 'is-invalid': f.submitted && newPassword.invalid }" required minlength="8"
-            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,})">
+            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}">
             <p class="font-italic"><small>*Atleast 8 characters long with UpperCase ,LowerCase ,digit ,special characters</small></p>
             <div *ngIf="f.submitted && newPassword.invalid" class="invalid-feedback">
                 <div *ngIf="newPassword.errors.required">Password is required</div>
@@ -31,6 +48,6 @@
             </div>
         </div>
         
-         <button type="submit" class="btn btn-primary">Proceed</button>
+        <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
     </form>
 </div>       
